--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
                 <h2>These are the wonder of music.</h2>
                 <p>Different types of music have a great influence on society, whether good or bad, they impact people to live and behave in a specific manner. With this website you are free to explore the different opportunities that music offers to the world. Hover your mouse over the button below to see what this website will feature.</p>
                 <br>
+                <a href="csp_proj_html_2.html">
                 <button>CLICK TO SEE THE DIFFERENT GENRES OF MUSIC</button>
+                </a>
             </div>
         </header>
         <div class="footer">
