Linked button for html_2 to html_3

--- a/html_2.html
+++ b/html_2.html
@@ -31,9 +31,11 @@
                 <img src="jazz_page_2.jpg">
                 <span>Jazz</span>
             </div>
+                <a href="html_3.html">
                 <button>
                     Click here to view the famous artists of each genre!
                 </button>
+                </a>
           </div>
     </body>
 </html>
