--- a/html_2.html
+++ b/html_2.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="styelsheet" href="csp_proj_js_2.js" type="text/Javascript">
-        <link rel="stylesheet" href="csp_proj_css_2.css" type="text/css">
+        <link rel="styelsheet" href="js_2.js" type="text/Javascript">
+        <link rel="stylesheet" href="css_2.css" type="text/css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initil-scale=1">
     </head>
