updates to html_3 and html_2

--- a/html_2.html
+++ b/html_2.html
@@ -21,7 +21,7 @@
             </div>
             <div class="box">
               <img src="hip-hop_page_2.jpg">
-              <span>Hip-Hop</span>
+              <span>Pop</span>
             </div>
             <div class="box">
               <img src="country_page_2.jpg">
