--- a/html_3.html
+++ b/html_3.html
@@ -14,7 +14,11 @@
                 <a href="https://google.com" class="card">
                     <div class="inner">
                       <h2 class="title">The Beatles</h2>
-                      <time class="subtitle">03. März 2021<time>
+                      <time class="subtitle">The Beatles were an English rock band consisting of four teenagers 
+                        from Liverpool. The group performed at small venues in 1960 and 1961. When Brian Epstein
+                        saw the group play at the Cavern Club, he was curious after hearing mention of the band. 
+                        He returned to take in a few more shows and on December 10, 1961, Epstein approached
+                        the band and a five-year contract was signed in January of 1962.  <time>
                     </div>
                 </a>
                       
