--- a/html_3.html
+++ b/html_3.html
@@ -52,7 +52,11 @@
                 <a class="card card4">
                     <div class="inner">
                       <h2 class="title">Country - Blake Shelton</h2>
-                      <time class="subtitle">03. März 2021<time>
+                      <time class="subtitle">Blake Shelton was born in Ada, Oklahoma, in 1976 and moved to Nashvillewhen he 
+                        was 17 to become a country music songwriter. By 2001, he was a star with his No. 1 hit "Austin", holding 
+                        its spot for five weeks. In 2007, Shelton made his first appearance on reality TV, appearing first as a 
+                        judge on "Nashville Star" and then on "Clash of the Choirs". He went on to win several awards at the 2010
+                        Grand Ole Opry. Success followed him for many years, eventually onto the judging panel of "The Voice" in 2011. <time>
                     </div>
                 
                 </a>
