--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <header>
             <div class="overlay">
                 <h1>Music</h1>
-                <h2>These are the wonder of music.</h2>
-                <p>Different types of music have a great influence on society, whether good or bad, they impact people to live and behave in a specific manner. With this website you are free to explore the different opportunities that music offers to the world. Hover your mouse over the button below to see what this website will feature.</p>
+                <h2>The Wonders of Music.</h2>
+                <p>Whether good or bad, having different music genres plays a role in society. They impact people, making them live and behave a specific way. Explore the different genres that music offers to the world. Click to learn more!</p>
                 <br>
                 <a href="html_2.html">
                 <button>CLICK TO SEE THE DIFFERENT GENRES OF MUSIC</button>
@@ -24,8 +24,7 @@
           <div id="container">
           <div id="cont">
           <div class="footer_center">
-                 <h3>What will be featured on this website:</h3>
-                 <p>MUSIC GENRES, POPULAR ARISTS, & WHY IS EACH GENRE IMPORTANT?</p>
+                 <h3>Learn about music genres, popular artists, and the importance of each genre!</h3>
           </div>
           </div>
           </div>
