--- a/html_3.html
+++ b/html_3.html
@@ -64,7 +64,13 @@
                 <a class="card card5">
                     <div class="inner">
                       <h2 class="title">Jazz - Miles Davis</h2>
-                      <time class="subtitle">03. März 2021<time>
+                      <time class="subtitle">Miles Davis was born in 1926, in Alton, Illinois. His dad introduced him to a trumpet at age 13. Davis developed a talent to play 
+                        the trumpet and emplasized playing it without vibrato. While in high school, he played professionally and was invited to play with Dizzy Gillespie and Charles
+                        Parker. In 1945, Davis dropped out of Juilliard and become a full-time jazz musician, recording his first song as band
+                        leader. In the '50s and '70s, Davis was drawn into drug abuse. He overcame the addiction
+                        and spent the '80s experimenting different styles. He died of 
+                        pneumonia and respiratory failure in 1991. His recording with Jones brought him his final Grammy in 1993. The honor 
+                        was just another testament to Davis' lasting influence on jazz.<time>
                     </div>
                 </a>
               <main>
