--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div id="container">
           <div id="cont">
           <div class="footer_center">
-                 <h3>Learn about music genres, popular artists, and the importance of each genre!</h3>
+                 <h3>Learn about music genres, popular artists, and much more!</h3>
           </div>
           </div>
           </div>
