update pop photo

--- a/html_2.html
+++ b/html_2.html
@@ -20,7 +20,7 @@
               <span>Classical</span>
             </div>
             <div class="box">
-              <img src="hip-hop_page_2.jpg">
+              <img src="pop.jpg">
               <span>Pop</span>
             </div>
             <div class="box">
