--- a/html_2.html
+++ b/html_2.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initil-scale=1">
     </head>
     <body>
-        <h1>~ Music Genres ~</h1>
+        <h1>⊱ ────── Music Genres ────── ⊰</h1>
             <p>An insight on the top music genres of the world.</p>
         <h2>Hover over the images to view the different genre styles. When ready, click the button to the right!</h2>
         <div class="container">
