--- a/html_4.html
+++ b/html_4.html
@@ -7,11 +7,13 @@
 				color: white;
 				text-align: center;
 				font-size: 40px;
+				text-shadow: 3px 3px 3px #4721b0;
 			}
 			p {
 				color: white;
 				font-size: 22px;
 				text-align: center;
+				text-shadow: 3px 3px 3px #4721b0;
 			}
 		</style>
         <link rel="stylesheet" href="js_3.js" type="text/Javasript">
@@ -20,7 +22,7 @@
         <meta name="viewport" content="width=device-width, initil-scale=1">
     </head>
     <body>
-		<h1>~ Why is each genre important? ~</h1>
+		<h1>⊱ ────── Why is each genre important? ────── ⊰</h1>
             <p>Explore the popular artist for each genre.</p>
         <section>
 			<details open>
