--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <div class="overlay">
-                <h1>Music</h1>
+                <h1>⊱ ────── Music ────── ⊰</h1>
                 <h2>The Wonders of Music.</h2>
                 <p>Whether good or bad, having different music genres plays a role in society. They impact people, making them live and behave a specific way. Explore the different genres that music offers to the world. Click to learn more!</p>
                 <br>
