--- a/html_3.html
+++ b/html_3.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initil-scale=1">
     </head>
     <body>
-        <h1>~ Famous Artists ~</h1>
+        <h1>⊱ ────── Famous Artists ────── ⊰</h1>
             <p>Explore the popular artist for each genre.</p>
               
               <main>
