--- a/html_4.html
+++ b/html_4.html
@@ -26,21 +26,21 @@
             <p>Explore the popular artist for each genre.</p>
         <section>
 			<details open>
-			  <summary>Carl Gustav Jung</summary>
+			  <summary>Rock</summary>
 			  <div>
-				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/344846/_jung.jpg" />
-				<p>The Swiss psychologist and psychiatrist Carl Jung was one of the major forces responsible for bringing psychological (having to do with the mind and its processes) thought and its theories into the twentieth century.</p>
+				<img src="chuckberry.jpg" />
+				<p>During the 40s, the popular genres of blues and country music were combined using powerful electric guitar riffs and drums to create a more "aggressive" genre than the originals. In the 50s, Chuck Berry, a pioneer of rock music, grew in popularity, which led to the growth of rock music as a whole. People appreciated the aspect of defiance that rock music popularized, both to popular music of the past and to the conservative society of the time.</p>
 			  </div>
 			</details>
 			<details>
-			  <summary>Sigmund Freud</summary>
+			  <summary>Country</summary>
 			  <div>
 				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/344846/_freud.jpg" />
 				<p>The work of Sigmund Freud, the Austrian founder of psychoanalysis, marked the beginning of a modern, dynamic psychology by providing the first well-organized explanation of the inner mental forces determining human behavior.</p>
 			  </div>
 			</details>
 			<details>
-			  <summary>Alfred Adler</summary>
+			  <summary>Pop</summary>
 			  <div>
 				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/344846/_alfred.jpg" />
 				<p>Austrian psychiatrist Alfred Adler was credited with developing several important theories on the motivation of human behavior. He founded the school of individual psychology, a comprehensive "science of living" that focuses on the uniqueness of the individual
@@ -48,15 +48,7 @@
 			  </div>
 			</details>
 			<details>
-				<summary>Alfred Adler</summary>
-				<div>
-				  <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/344846/_alfred.jpg" />
-				  <p>Austrian psychiatrist Alfred Adler was credited with developing several important theories on the motivation of human behavior. He founded the school of individual psychology, a comprehensive "science of living" that focuses on the uniqueness of the individual
-					and a person's relationships with society.</p>
-				</div>
-			</details>
-			<details>
-				<summary>Alfred Adler</summary>
+				<summary>Jazz</summary>
 				<div>
 				  <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/344846/_alfred.jpg" />
 				  <p>Austrian psychiatrist Alfred Adler was credited with developing several important theories on the motivation of human behavior. He founded the school of individual psychology, a comprehensive "science of living" that focuses on the uniqueness of the individual
