--- a/html_4.html
+++ b/html_4.html
@@ -16,31 +16,44 @@
 				text-shadow: 3px 3px 3px #4721b0;
 			}
 		</style>
-        <link rel="stylesheet" href="js_3.js" type="text/Javasript">
+        <link rel="stylesheet" href="js_4.js" type="text/Javasript">
         <link rel="stylesheet" href="css_4.css" type="text/css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initil-scale=1">
     </head>
     <body>
 		<h1>⊱ ────── Why is each genre important? ────── ⊰</h1>
-            <p>Explore the popular artist for each genre.</p>
+            <p>Explore the history and impact of each genre on the world today.</p>
         <section>
 			<details open>
 			  <summary>Rock</summary>
 			  <div>
 				<img src="chuckberry.jpg" />
-				<p>During the 40s, the popular genres of blues and country music were combined using powerful electric guitar riffs and drums to create a more "aggressive" genre than the originals. In the 50s, Chuck Berry, a pioneer of rock music, grew in popularity, which led to the growth of rock music as a whole. People appreciated the aspect of defiance that rock music popularized, both to popular music of the past and to the conservative society of the time.</p>
+				<p>History:</p>
+				<ul>
+					<li>During the 40s, the popular genres of blues and country music were combined using powerful electric guitar riffs and drums to create a more "aggressive" genre than the originals.</li>
+					<li>In the 50s, Chuck Berry, a pioneer of rock music, grew in popularity, which led to the growth of rock music as a whole.</li>
+					<li>People appreciated the aspect of defiance that rock music popularized, both to popular music of the past and to the conservative society of the time.</li>
+				</ul>
 			  </div>
 			</details>
 			<details>
-			  <summary>Country</summary>
+				<summary>Classical</summary>
+				<div>
+				  <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/344846/_alfred.jpg" />
+				  <p>Austrian psychiatrist Alfred Adler was credited with developing several important theories on the motivation of human behavior. He founded the school of individual psychology, a comprehensive "science of living" that focuses on the uniqueness of the individual
+					and a person's relationships with society.</p>
+				</div>
+			</details>
+			<details>
+			  <summary>Pop</summary>
 			  <div>
 				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/344846/_freud.jpg" />
 				<p>The work of Sigmund Freud, the Austrian founder of psychoanalysis, marked the beginning of a modern, dynamic psychology by providing the first well-organized explanation of the inner mental forces determining human behavior.</p>
 			  </div>
 			</details>
 			<details>
-			  <summary>Pop</summary>
+			  <summary>Country</summary>
 			  <div>
 				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/344846/_alfred.jpg" />
 				<p>Austrian psychiatrist Alfred Adler was credited with developing several important theories on the motivation of human behavior. He founded the school of individual psychology, a comprehensive "science of living" that focuses on the uniqueness of the individual
