--- a/Music Genres.html
+++ b/Music Genres.html
@@ -31,7 +31,7 @@
                 <img src="jazz_page_2.jpg">
                 <span>Jazz</span>
             </div>
-                <a href="html_3.html">
+                <a href="Famous Artists.html">
                 <button>
                     Click here to view the famous artists of each genre!
                 </button>
