--- a/Music.html
+++ b/Music.html
@@ -14,7 +14,7 @@
                 <h2>The Wonders of Music.</h2>
                 <p>Whether good or bad, having different music genres plays a role in society. They impact people, making them live and behave a specific way. Explore the different genres that music offers to the world. Click to learn more!</p>
                 <br>
-                <a href="html_2.html">
+                <a href="Music Genres.html">
                 <button>CLICK TO SEE THE DIFFERENT GENRES OF MUSIC</button>
                 </a>
             </div>
