--- a/html_3.html
+++ b/html_3.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>⊱ ────── Famous Artists ────── ⊰</h1>
-            <p>Explore the popular artist for each genre.</p>
+            <p>Explore the popular artists of each genre!</p>
               
               <main>
                 <a class="card">
