--- a/Famous Artists.html
+++ b/Famous Artists.html
@@ -89,6 +89,21 @@
                     </div>
                 </a>
               <main>
-                
+                <div>
+                  <a href="Importance of Each Genre.html">
+                  <div class="container">
+                    <div class="bottom"></div>
+                    <div class="cover cut"></div>
+                    <div class="text-container">
+                      <div class="text text-dark">Click to view the importance of each genre</div>
+                    </div>
+                    <div class="text-container cut">
+                      <div class="text">Click to view the importance of each genre</div>
+                    </div>
+                    <div class="overlay"></div>
+                  </div>
+                </div>
+                </a>
               <footer></footer>
+              
     </body>
