--- a/Importance of Each Genre.html
+++ b/Importance of Each Genre.html
@@ -9,12 +9,13 @@
 				font-size: 40px;
 				text-shadow: 3px 3px 3px #4721b0;
 			}
-			p {
+			p{
 				color: white;
 				font-size: 22px;
 				text-align: center;
 				text-shadow: 3px 3px 3px #4721b0;
 			}
+
 		</style>
         <link rel="stylesheet" href="js_4.js" type="text/Javasript">
         <link rel="stylesheet" href="css_4.css" type="text/css">
@@ -28,42 +29,59 @@
 			<details open>
 			  <summary>Rock</summary>
 			  <div>
-				<img src="chuckberry.jpg" />
 				<p>History:</p>
 				<ul>
 					<li>During the 40s, the popular genres of blues and country music were combined using powerful electric guitar riffs and drums to create a more "aggressive" genre than the originals.</li>
 					<li>In the 50s, Chuck Berry, a pioneer of rock music, grew in popularity, which led to the growth of rock music as a whole.</li>
 					<li>People appreciated the aspect of defiance that rock music popularized, both to popular music of the past and to the conservative society of the time.</li>
 				</ul>
+				<img src="chuckberry.jpg"/>
 			  </div>
 			</details>
 			<details>
 				<summary>Classical</summary>
 				<div>
+					<p>History:</p>
+					<ul>
+						<li>Austrian psychiatrist Alfred Adler was credited with developing several important theories on the motivation of human behavior.</li>
+						<li>He founded the school of individual psychology, a comprehensive "science of living" that focuses on the uniqueness of the individual
+							and a person's relationships with society.</li>
+					</ul>
 				  <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/344846/_alfred.jpg" />
-				  <p>Austrian psychiatrist Alfred Adler was credited with developing several important theories on the motivation of human behavior. He founded the school of individual psychology, a comprehensive "science of living" that focuses on the uniqueness of the individual
-					and a person's relationships with society.</p>
 				</div>
 			</details>
 			<details>
 			  <summary>Pop</summary>
 			  <div>
+				<p>History:</p>
+				<ul>
+					<li>With the early to mid 1900s came the rise of genres like rock, country, and jazz. With those came a newer genre that was a culmination of them all: pop music.</li>
+					<li>With the pop genre, the most ~popular~ songs in the mainstream could be categorized into a group with characteristics of all sorts of styles of music. </li>
+					<li>Due to the growing popularity of radio and television and music icons like Elvis Presley, music became much more mainstream and accessible.</li>
+				</ul>
 				<img src="elvispresley.jpg" />
-				<p>With the early to mid 1900s came the rise of genres like rock, country, and jazz. With those came a newer genre that was a culmination of them all: pop music. With the pop genre, the most ~popular~ songs in the mainstream could be categorized into a group with characteristics of all sorts of styles of music. Due to the growing popularity of radio and television and music icons like Elvis Presley, music became much more mainstream and accessible.</p>
 			  </div>
 			</details>
 			<details>
 				<summary>Country</summary>
 				<div>
+					<p>History:</p>
+					<ul>
+						<li>Originated during the early 1900s, country music was a significant part of rural southern and western American cultures. </li>
+						<li>The genre's roots lie in folk music, ballads, and settlers in areas like the Appalachians. </li>
+						<li>Fiddlin' John Carson created one of the first popular country songs in the 1920s, which led to the further growth of the genre in mainstream music.</li>
+					</ul>
 				  <img src="Fiddlin'JohnCarson.jpg" />
-				  <p>Originated during the early 1900s, country music was a significant part of rural southern and western American cultures. The genre's roots lie in folk music, ballads, and settlers in areas like the Appalachians. Fiddlin' John Carson created one of the first popular country songs in the 1920s, which led to the further growth of the genre in mainstream music.</p>
 				</div>
 			  </details>
 			<details>
 				<summary>Jazz</summary>
 				<div>
+					<p>History:</p>
+					<ul>
+						<li>The genre of jazz originated with west </li>
+					</ul>
 				  <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/344846/_alfred.jpg" />
-				  <p>The genre of jazz originated with west </p>
 				</div>
 			</details>
 		  </section>
