Update Importance of Each Genre.html

--- a/Importance of Each Genre.html
+++ b/Importance of Each Genre.html
@@ -35,6 +35,13 @@
 					<li>In the 50s, Chuck Berry, a pioneer of rock music, grew in popularity, which led to the growth of rock music as a whole.</li>
 					<li>People appreciated the aspect of defiance that rock music popularized, both to popular music of the past and to the conservative society of the time.</li>
 				</ul>
+				<p>Impact:</p>
+				<ul>
+					<li>Rock influenced many factors of life with the major changes affecting fashion, attitudes, and language. Even to this day you see people wearing shirts of famous rock bands like AC/DC, Queen, The Rolling Stones, etc.</li>
+					<li>Having appeared during a time of heavy segregation between whites and blacks in thw 1950's, it changed musical norms and opened a door to youth culture.</li>
+					<li>Many white rock 'n' rollers were able to build a ladder for black artists to enter into the musical world and it indicated one of the first steps of acceptance.</li>
+					<li>Rock promoted the idea of self-expression and individuality, encouraging people to embrace both their identities and freedom.</li>
+				</ul>
 				<img src="chuckberry.jpg"/>
 			  </div>
 			</details>
