--- a/navigationbar.html
+++ b/navigationbar.html
@@ -1,6 +1,26 @@
-<div class="topnav" id="myTopnav">
-    <a href="#HOME" class="active">Home</a>
-    <a href="#GENRES">Genres</a>
-    <a href="#ARTISTS">Artists</a>
-    <a href="#HISTORY">History</a>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8"
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.cc" />
+        <title>Document</title>
+    </head>
+    <body>
+        <nav class="navbar">
+            <div class="logo">Music</div>
+            <ul class="nav-links">
+                <input type="checkbox" id="checkbox_toggle" />
+                <label for="checkbox_toggle" class="hamburger">&#9776</label>
+                <div class="menu">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/">Genres</a></li>
+                    <li><a href="/">Artists</a></li>
+                    <li><a href="/">History</a></li>
+                    </li>
+                </div>
+            </ul>
+        </nav>
+    </body>
+</html>
