updates to 4th html

--- a/Importance of Each Genre.html
+++ b/Importance of Each Genre.html
@@ -15,7 +15,11 @@
 				text-align: center;
 				text-shadow: 3px 3px 3px #4721b0;
 			}
-
+			ul, li {
+				color:#4721b0;
+				font-size: 16px;
+				text-shadow: 3px 3px 3px white;
+			}
 		</style>
         <link rel="stylesheet" href="js_4.js" type="text/Javasript">
         <link rel="stylesheet" href="css_4.css" type="text/css">
@@ -43,6 +47,7 @@
 					<li>Rock promoted the idea of self-expression and individuality, encouraging people to embrace both their identities and freedom.</li>
 				</ul>
 				<img src="chuckberry.jpg"/>
+				<img src="rock_clothing.jpg"/>
 			  </div>
 			</details>
 			<details>
