--- a/Importance of Each Genre.html
+++ b/Importance of Each Genre.html
@@ -48,6 +48,7 @@
 				</ul>
 				<img src="chuckberry.jpg"/>
 				<img src="rock_clothing.jpg"/>
+				<img src="elvis_rock.jpg"/>
 			  </div>
 			</details>
 			<details>
