--- a/navigationbar.html
+++ b/navigationbar.html
@@ -14,10 +14,10 @@
                 <input type="checkbox" id="checkbox_toggle" />
                 <label for="checkbox_toggle" class="hamburger">&#9776</label>
                 <div class="menu">
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/">Genres</a></li>
-                    <li><a href="/">Artists</a></li>
-                    <li><a href="/">History</a></li>
+                    <li><a href="Music.html">Home</a></li>
+                    <li><a href="Music Genres.html">Genres</a></li>
+                    <li><a href="Famous Artists.html">Artists</a></li>
+                    <li><a href="Importance of Each Genre.html">History</a></li>
                     </li>
                 </div>
             </ul>
