--- a/Importance of Each Genre.html
+++ b/Importance of Each Genre.html
@@ -46,9 +46,10 @@
 					<li>Many white rock 'n' rollers were able to build a ladder for black artists to enter into the musical world and it indicated one of the first steps of acceptance.</li>
 					<li>Rock promoted the idea of self-expression and individuality, encouraging people to embrace both their identities and freedom.</li>
 				</ul>
-				<img src="chuckberry.jpg"/>
-				<img src="rock_clothing.jpg"/>
-				<img src="elvis_rock.jpg"/>
+				<div style="text-align: center"><img src="chuckberry.jpg" width="150" height="150"/></div>
+				<div style="text-align: center"><img src="rock_clothing.jpg" width="200" height="150"/></div>
+				<div style="text-align: center"><img src="elvis_rock.jpg" width="100" height="150"/></div>
+				<div style="text-align: center"><img src="rock_poster.jpg" width="192" height="150"/></div>
 			  </div>
 			</details>
 			<details>
