--- a/Music Genres.html
+++ b/Music Genres.html
@@ -1,6 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="navigationbar.css" />
+        <title>Document</title>
+    </head>
+    <body>
+        <nav class="navbar">
+            <div class="logo">The Wonders of Music</div>
+            <ul class="nav-links">
+                <div class="menu">
+                    <li><a href="Music.html">Home</a></li>
+                    <li><a href="Music Genres.html">Genres</a></li>
+                    <li><a href="Famous Artists.html">Artists</a></li>
+                    <li><a href="Importance of Each Genre.html">History</a></li>
+                    </li>
+                </div>
+            </ul>
+        </nav>
+      </body>
+    <head>
         <link rel="styelsheet" href="js_2.js" type="text/Javascript">
         <link rel="stylesheet" href="css_2.css" type="text/css">
         <meta charset="UTF-8">
