--- a/navigationbar.html
+++ b/navigationbar.html
@@ -4,15 +4,13 @@
         <meta charset="UTF-8"
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="style.cc" />
+        <link rel="stylesheet" href="navigationbar.css" />
         <title>Document</title>
     </head>
     <body>
         <nav class="navbar">
             <div class="logo">Music</div>
             <ul class="nav-links">
-                <input type="checkbox" id="checkbox_toggle" />
-                <label for="checkbox_toggle" class="hamburger">&#9776</label>
                 <div class="menu">
                     <li><a href="Music.html">Home</a></li>
                     <li><a href="Music Genres.html">Genres</a></li>
