AESTHETIC UPDATES (css)!!!!

--- a/Importance of Each Genre.html
+++ b/Importance of Each Genre.html
@@ -24,22 +24,23 @@
     <head>
 		<style>
 			h1 {
-				font-family: 'Bookman, URW Bookman L', serif;
+				font-family: 'Courier New' monospace;
 				color: white;
 				text-align: center;
 				font-size: 40px;
-				text-shadow: 3px 3px 3px #4721b0;
+				text-shadow: -1px 0 #2e2837, 0 1px #2e2837, 1px 0 #2e2837, 0 -1px #2e2837;
 			}
 			p{
-				color: white;
+				color: #2e2837;
+				font-weight: bold;
 				font-size: 22px;
 				text-align: center;
-				text-shadow: 3px 3px 3px #4721b0;
+				font-family: 'Courier New', Courier, monospace;
 			}
 			ul, li {
-				color:#4721b0;
-				font-size: 16px;
-				text-shadow: 3px 3px 3px white;
+				color:#2e2837;
+				font-family: 'Courier New', Courier, monospace;
+				font-size: 16px; 
 			}
 		</style>
         <link rel="stylesheet" href="js_4.js" type="text/Javasript">
