--- a/Importance of Each Genre.html
+++ b/Importance of Each Genre.html
@@ -26,6 +26,7 @@
 			h1 {
 				font-family: 'Courier New' monospace;
 				color: white;
+				margin-top: 30px;
 				text-align: center;
 				font-size: 40px;
 				text-shadow: -1px 0 #2e2837, 0 1px #2e2837, 1px 0 #2e2837, 0 -1px #2e2837;
