--- a/Music Genres.html
+++ b/Music Genres.html
@@ -29,8 +29,8 @@
     </head>
     <body>
         <h1>⊱ ────── Music Genres ────── ⊰</h1>
-            <p>An insight on the top music genres of the world.</p>
-        <h2>Hover over the images to view the different genre styles. When ready, click the button to the right!</h2>
+        <h2>An insight on the top music genres of the world.</h2>
+            <p>Hover over the images to view the different genre styles. When ready, click the button to the right!</p>
         <div class="container">
             <div class="box">
               <img src="rock_page_2.jpg">
