--- a/Famous Artists.html
+++ b/Famous Artists.html
@@ -9,6 +9,19 @@
     </head>
     <body>
         <nav class="navbar">
+          <style>
+            nav {
+              font-family: 'Courier New', Courier, monospace;
+            }
+            .navbar {
+              display: flex;
+              align-items: center;
+              justify-content: space-between;
+              padding: 20px;
+              background-color: rgb(46, 40, 55, 0.8);
+              color: #d2c7e5;
+            }
+          </style>
             <div class="logo">The Wonders of Music</div>
             <ul class="nav-links">
                 <div class="menu">
