--- a/Importance of Each Genre.html
+++ b/Importance of Each Genre.html
@@ -9,6 +9,24 @@
     </head>
     <body>
         <nav class="navbar">
+			<style>
+			nav {
+              font-family: 'Courier New', Courier, monospace;
+            }
+            .navbar {
+              display: flex;
+              align-items: center;
+              justify-content: space-between;
+              padding: 20px;
+              background-color: rgb(46, 40, 55, 0.8);
+              color: #d2c7e5;
+            }
+			.menu li:hover {
+    			background-color: wheat;
+    			border-radius: 5px;
+   				transition: 0.3s ease;
+			}
+			</style>
             <div class="logo">The Wonders of Music</div>
             <ul class="nav-links">
                 <div class="menu">
@@ -39,7 +57,6 @@
 				font-family: 'Courier New', Courier, monospace;
 			}
 			ul, li {
-				color:#2e2837;
 				font-family: 'Courier New', Courier, monospace;
 				font-size: 16px; 
 			}
