--- a/Importance of Each Genre.html
+++ b/Importance of Each Genre.html
@@ -149,5 +149,11 @@
 				</div>
 			</details>
 		  </section>
+	<head>
+		<meta chatset="UTF=8">
+		<title>Like and unlike system</title>
+		<link rel="stylesheet" href="likebutton.css"/>
+		<link rel="stylesheet" href="/"/>
+	</head>
     </body>
 </html>
