--- a/Importance of Each Genre.html
+++ b/Importance of Each Genre.html
@@ -98,9 +98,10 @@
 				<div>
 					<p>History:</p>
 					<ul>
-						<li>Austrian psychiatrist, Alfred Adler, was credited with developing several important theories on the motivation of human behavior</li>
-						<li>He founded the school of individual psychology, a comprehensive "science of living" that focuses on the uniqueness of the individual
-							and a person's relationships with society</li>
+						<li>Classical music was first able to gain importance from the composers: Joseph Haydn, Wolfgang Amadeus Mozart,Ludwig van Beethoven, and Franz Schubert, etc.</li>
+						<li>Classical music was during the Classical period which became significant between the Baroque & Romantic periods.</li>
+						<li>As mentioned before, the most popular classical artist was Ludwig van Beethoven who was regarded as a Romantic composer who was responsible for the transition to the Romantic era.</li>
+						<li>The style of Classicism was made to highlight the ideals of Classical antiquity </li>
 					</ul>
 					<p>Impact:</p>
 					<ul>
