--- a/Importance of Each Genre.html
+++ b/Importance of Each Genre.html
@@ -18,7 +18,7 @@
               align-items: center;
               justify-content: space-between;
               padding: 20px;
-              background-color: rgb(46, 40, 55, 0.8);
+              background-color: #2e2837;
               color: #d2c7e5;
             }
 			.menu li:hover {
@@ -43,11 +43,10 @@
 		<style>
 			h1 {
 				font-family: 'Courier New' monospace;
-				color: white;
+				color:#2e2837;
 				margin-top: 30px;
 				text-align: center;
 				font-size: 40px;
-				text-shadow: -1px 0 #2e2837, 0 1px #2e2837, 1px 0 #2e2837, 0 -1px #2e2837;
 			}
 			p{
 				color: #2e2837;
