--- a/Famous Artists.html
+++ b/Famous Artists.html
@@ -18,7 +18,7 @@
               align-items: center;
               justify-content: space-between;
               padding: 20px;
-              background-color: rgb(46, 40, 55, 0.8);
+              background-color: #2e2837;
               color: #d2c7e5;
             }
           </style>
