--- a/Music.html
+++ b/Music.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="navigationbar.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oooh+Baby&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100&family=Oooh+Baby&display=swap" rel="stylesheet">
         <title>Document</title>
     </head>
     <body>
