--- a/navigationbar.html
+++ b/navigationbar.html
@@ -19,6 +19,7 @@
                     <li><a href="Music Genres.html">Genres</a></li>
                     <li><a href="Famous Artists.html">Artists</a></li>
                     <li><a href="Importance of Each Genre.html">History</a></li>
+                    <li><a href="index.php"></a></li>
                     </li>
                 </div>
             </ul>
