--- a/Music Genres.html
+++ b/Music Genres.html
@@ -11,6 +11,19 @@
     </head>
     <body>
         <nav class="navbar">
+            <style>
+                nav {
+                  font-family: 'Courier New', Courier, monospace;
+                }
+                .navbar {
+                  display: flex;
+                  align-items: center;
+                  justify-content: space-between;
+                  padding: 20px;
+                  background-color: #2e2837;
+                  color: #d2c7e5;
+                }
+              </style>
             <div class="logo">The Wonders of Music</div>
             <ul class="nav-links">
                 <div class="menu">
