--- a/Music.html
+++ b/Music.html
@@ -12,6 +12,19 @@
     </head>
     <body>
         <nav class="navbar">
+            <style>
+                nav {
+                  font-family: 'Courier New', Courier, monospace;
+                }
+                .navbar {
+                  display: flex;
+                  align-items: center;
+                  justify-content: space-between;
+                  padding: 20px;
+                  background-color: #2e2837;
+                  color: #d2c7e5;
+                }
+              </style>
             <div class="logo">The Wonders of Music</div>
             <ul class="nav-links">
                 <div class="menu">
@@ -34,7 +47,7 @@
     <body>
         <header>
             <div class="overlay">
-                <h1>⊱ ────── Music ────── ⊰</h1>
+                <h1 style="color: #2e2837;">⊱ ────── Music ────── ⊰</h1>
                 <h2>The Wonders of Music</h2>
                 <p>How many hours do you spend on Spotify, iTunes, YouTube, or any music app, scrolling through the countless songs and albums there are? Its almost endless right? Music helps people write stories and share them with the world amongst them, in a unique and beautiful way. Music connects people with an irresistible pull and brings importance to various cultures, ethnicities, and ideas. This website will take you through the journey of finding your love for music, the large variety of genres it has, famous artists and the very significance of "music". Click the buttons to unlock a new story.</p>
                 <br>
