--- a/navigationbar.html
+++ b/navigationbar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8"
+        <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="navigationbar.css" />
@@ -19,7 +19,7 @@
                     <li><a href="Music Genres.html">Genres</a></li>
                     <li><a href="Famous Artists.html">Artists</a></li>
                     <li><a href="Importance of Each Genre.html">History</a></li>
-                    <li><a href="index.php"></a></li>
+                    <li><a href="index.php">Search</a></li>
                     </li>
                 </div>
             </ul>
