--- a/Importance of Each Genre.html
+++ b/Importance of Each Genre.html
@@ -1,34 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+	<head>
         <meta charset="UTF-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="navigationbar.css" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100&family=Oooh+Baby&display=swap" rel="stylesheet">
         <title>Document</title>
     </head>
     <body>
         <nav class="navbar">
-			<style>
-			nav {
-              font-family: 'Courier New', Courier, monospace;
-            }
-            .navbar {
-              display: flex;
-              align-items: center;
-              justify-content: space-between;
-              padding: 20px;
-              background-color: #2e2837;
-              color: #d2c7e5;
-            }
-			.menu li:hover {
-    			background-color: wheat;
-    			border-radius: 5px;
-   				transition: 0.3s ease;
-			}
-			</style>
+            <style>
+                nav {
+                  font-family: 'Courier New', Courier, monospace;
+                }
+                .navbar {
+                  display: flex;
+                  align-items: center;
+                  justify-content: space-between;
+                  padding: 20px;
+                  background-color: #2e2837;
+                  color: #d2c7e5;
+                }
+              </style>
             <div class="logo">The Wonders of Music</div>
             <ul class="nav-links">
                 <div class="menu">
@@ -40,7 +35,7 @@
                 </div>
             </ul>
         </nav>
-    </body>
+      </body>
     <head>
 		<style>
 			h1 {
@@ -151,11 +146,11 @@
 				</div>
 			</details>
 		  </section>
-	<head>
+	<!---<head>
 		<meta chatset="UTF=8">
 		<title>Like and unlike system</title>
 		<link rel="stylesheet" href="likebutton.css"/>
 		<link rel="stylesheet" href="/"/>
-	</head>
+	</head>--->
     </body>
 </html>
