--- a/Music.html
+++ b/Music.html
@@ -32,6 +32,8 @@
                     <li><a href="Music Genres.html">Genres</a></li>
                     <li><a href="Famous Artists.html">Artists</a></li>
                     <li><a href="Importance of Each Genre.html">History</a></li>
+                    <li><a href="dbh.php">Search</a></li>
+                    <li><a href="test.html">test</a></li>
                     </li>
                 </div>
             </ul>
