--- a/Famous Artists.html
+++ b/Famous Artists.html
@@ -116,9 +116,9 @@
                           <li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">Born in 1926, in Alton, Illinois</li>
                           <li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">His dad introduced him to a trumpet at age 13</li>
                           <li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">Davis developed a talent to play the trumpet and emplasized playing it without vibrato. While in high school, he played professionally and was invited to play with Dizzy Gillespie and Charles Parker.</li>
-                          <li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">In 1945, Davis dropped out of Juilliard and become a full-time jazz musician, recording his first song as band leader.</li>
+                          <li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">In 1945, Davis dropped out of Juilliard and became a full-time jazz musician.</li>
                           <li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">In the '50s and '70s, Davis was drawn into drug abuse. He overcame the addiction and spent the '80s experimenting different styles.</li>
-                          <li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">His recording with Jones brought him his final Grammy in 1993. The honor was just another testament to Davis' lasting influence on jazz.</li>
+                          <li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">His recording with Jones brought him his final Grammy in 1993.</li>
                         </ul>
                       <time>
                     </div>
